--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@ data/
 
 # Ignore virtual environment
 .venv/
+
+# DS_Store
+.DS_Store
+
+# Ignore the .db_structure directory within implementation
+implementation/.db_structure/
+
+# Ignore Jupyter notebook checkpoint directories
+**/.ipynb_checkpoints/
+Here’s how to add these rules t
